deployment/dev/fe/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
  namespace: default
  # annotations:
  #   secret.reloader.stakater.com/reload: "qualgosecret"
  labels:
    app: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: "qualgo-sa"
      imagePullSecrets:
      - name: regcred
      containers:
      - name: devops-container
        image: devopsqualgo557.azurecr.io/dev/fe:tag
        # volumeMounts:
        # - name: secrets-store01-inline
        #   mountPath: "/mnt/secrets-store"
        #   readOnly: true
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fe-svc
  namespace: default
spec:
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fe-vs
  namespace: default
spec:
  hosts:
  - "shop.yanyicivic.com"
  gateways:
  - istio-ingress/https
  http:
  - route:
    - destination:
        host: "fe-svc"
        port:
          number: 80
